# qwinff

./: .gitignore  .hgignore  .travis.yml  CHANGELOG.txt  CMakeLists.txt  FormatConverter.pro  INSTALL.txt  Makefile  README.md  README.txt  images.qrc  main.cpp  presets.xml  qwinff.desktop  qwinff.nsi  qwinff.nsi.in  windows_build.bat  windows_build_portable.bat
converter/: conversionparameters.cpp  conversionparameters.h  converterinterface.cpp  converterinterface.h  ffmpeginterface.cpp  ffmpeginterface.h  mediaconverter.cpp  mediaconverter.h  mediaprobe.cpp  mediaprobe.h  mencoderinterface.cpp  mencoderinterface.h  presets.cpp  presets.h
man/: qwinff.1
src/: CMakeLists.txt  FormatConverter.pro  config.h  constants.xml  extra-translations.h  get-version.sh  images.qrc  main.cpp  presets.xml  qwinff.pro  settings.txt  update-translations.sh  version.h
src/converter/: audiofilter.cpp  audiofilter.h  conversionparameters.cpp  conversionparameters.h  converterinterface.cpp  converterinterface.h  exepath.cpp  exepath.h  ffmpeginterface.cpp  ffmpeginterface.h  ffplayinterface.cpp  ffplayinterface.h  filepathoperations.cpp  filepathoperations.h  mediaconverter.cpp  mediaconverter.h  mediaprobe.cpp  mediaprobe.h  mencoderinterface.cpp  mencoderinterface.h  presets.cpp  presets.h  versioncompare.cpp  versioncompare.h
src/qmpwidget/: CMakeLists.txt  qmpwidget.cpp  qmpwidget.h  qmpyuvreader.h
src/services/: abstractpreviewer.cpp  abstractpreviewer.h  constants.cpp  constants.h  extensions.cpp  extensions.h  ffplaypreviewer.cpp  ffplaypreviewer.h  filepathoperations.cpp  filepathoperations.h  httpdownloader.cpp  httpdownloader.h  mplayerpreviewer.cpp  mplayerpreviewer.h  notification.cpp  notification.h  notificationservice-libnotify.cpp  notificationservice-libnotify.h  notificationservice-notifysend.cpp  notificationservice-notifysend.h  notificationservice-qt.cpp  notificationservice-qt.h  notificationservice.cpp  notificationservice.h  paths.cpp  paths.h  powermanagement-dummy.cpp  powermanagement-linux.cpp  powermanagement-w32.cpp  powermanagement.h  settingtimer.cpp  settingtimer.h  updatechecker.cpp  updatechecker.h  updateinfoparser.cpp  updateinfoparser.h  versioncompare.cpp  versioncompare.h  xmllookuptable.cpp  xmllookuptable.h
src/tests/: run-tests.sh
src/tests/testupdateinfoparser/: testupdateinfoparser.cpp  testupdateinfoparser.h
src/tests/testversioncompare/: testversioncompare.cpp  testversioncompare.h
src/tests/updateinfoparser/: testupdateinfoparser.cpp  testupdateinfoparser.h  testupdateinfoparser.pro
src/tests/versioncompare/: testversioncompare.cpp  testversioncompare.h  testversioncompare.pro
src/translations/: CMakeLists.txt  qwinff_ar.ts  qwinff_cs_CZ.ts  qwinff_de.ts  qwinff_es_ES.ts  qwinff_es_GT.ts  qwinff_fr.ts  qwinff_fr_FR.ts  qwinff_hu_HU.ts  qwinff_it_IT.ts  qwinff_ja_JP.ts  qwinff_pl_PL.ts  qwinff_pt_BR.ts  qwinff_ro_RO.ts  qwinff_ru.ts  qwinff_tr_TR.ts  qwinff_zh_CN.ts  qwinff_zh_TW.ts
src/ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  aboutffmpegdialog.cpp  aboutffmpegdialog.h  aboutffmpegdialog.ui  addtaskwizard.cpp  addtaskwizard.h  addtaskwizard.ui  addurldialog.cpp  addurldialog.h  addurldialog.ui  compositerangewidget.cpp  compositerangewidget.h  conversionparameterdialog.cpp  conversionparameterdialog.h  conversionparameterdialog.ui  convertlist.cpp  convertlist.h  extensions.h  formatlabel.cpp  formatlabel.h  interactivecuttingdialog.cpp  interactivecuttingdialog.h  interactivecuttingdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediaplayerwidget.cpp  mediaplayerwidget.h  mediaplayerwidget.ui  myqmpwidget.cpp  myqmpwidget.h  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  poweroffdialog.cpp  poweroffdialog.h  poweroffdialog.ui  previewdialog.cpp  (+13 more)
ui/: aboutffmpegdialog.cpp  aboutffmpegdialog.h  aboutffmpegdialog.ui  addtaskwizard.cpp  addtaskwizard.h  addtaskwizard.ui  conversionparameterdialog.cpp  conversionparameterdialog.h  conversionparameterdialog.ui  convertlist.cpp  convertlist.h  extensions.cpp  filepathoperations.cpp  filepathoperations.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  paths.cpp  paths.h  progressbar.cpp  progressbar.h
